--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,14 @@
 ---
-- hosts: localhost
+- name: Deploy Azure Resources 
+  hosts: localhost
   connection: local
   gather_facts: false
-
   roles:
-    - {role: deploy, tags: ['deploy']}
-    - {role: teardown, tags: ['teardown']}
+    - { role: deploy, tags: ['deploy'] }
+    - { role: teardown, tags: ['teardown'] }
+
+
+- name: Install Dev Environment
+  hosts: AZURE_CIC2
+  roles:
+    - { role: zsh }
