--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -62,6 +62,7 @@
   azure_rm_virtualmachine:
     resource_group: "{{ resource }}"
     name: "{{ item }}"
+    admin_username: "ansible"
     vm_size: "{{ vmsize }}"
     ssh_public_keys:
       - path: /home/adminUser/.ssh/authorized_keys
