working on tower cic2

--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -62,6 +62,7 @@
   azure_rm_virtualmachine:
     resource_group: "{{ resource }}"
     name: "{{ item }}"
+    os_type: Linux
     ssh_password_enabled: false
     vm_size: "{{ vmsize }}"
     ssh_public_keys:
