--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -40,7 +40,7 @@
             direction: Inbound
           - name: 'AllowEclipseCHE'
             protocol: Tcp
-            destination_port_range: *
+            destination_port_range: "*""
             access: Allow
             priority: 999
             direction: Inbound
