working on tower cic2

--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -50,13 +50,13 @@
             access: Allow
             priority: 998
             direction: Inbound
-          - name: 'AllowRegistry'
+          - name: 'AllowJMX1'
             protocol: Tcp
             destination_port_range: 32001
             access: Allow
             priority: 997
             direction: Inbound
-          - name: 'AllowRegistry'
+          - name: 'AllowJMX2'
             protocol: Tcp
             destination_port_range: 32101
             access: Allow
