--- a/roles/eclipse_che/tasks/main.yml
+++ b/roles/eclipse_che/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Install base packages
   yum:
-    name: {{ item }}
+    name: "{{ item }}"
     state: present
   with_items:
     - docker
