working on tower cic2

--- a/install.yml
+++ b/install.yml
@@ -2,8 +2,11 @@
 - name: Install Dev Environment
   hosts: ansibleresource
   become: yes
+  vars:
+   system_user: ansible
   roles:
     - { role: zsh }
+    - { role: jq }    
     - { role: eclipse_che }
 
     
