working on tower cic2

--- a/install.yml
+++ b/install.yml
@@ -6,7 +6,7 @@
    system_user: ansible
   roles:
     - { role: zsh }
-    - { role: jq }    
+    # - { role: jq }    
     - { role: eclipse_che }
 
     
