--- a/roles/sendgrid/tasks/main.yml
+++ b/roles/sendgrid/tasks/main.yml
@@ -2,7 +2,9 @@
 ---
 
 - sendgrid:
-      api_key: "{{ vault_sendgrid_api_key }}"
+      username: "bsollar"
+      password: "{{ vault_sendgrid_password }}"
+      # api_key: "{{ vault_sendgrid_password }}"
       from_address: "user@cic2demo.com"
       to_addresses:
         - "bsollar@redhat.com"
@@ -13,7 +15,9 @@
     - ares
   
 - sendgrid:
-      api_key: "{{ vault_sendgrid_api_key }}"
+      username: "bsollar"
+      password: "{{ vault_sendgrid_password }}"
+      # api_key: "{{ vault_sendgrid_api_key }}"
       from_address: "user@cic2demo.com"
       to_addresses:
         - "bsollar@redhat.com"
