--- a/sendgrid.yml
+++ b/sendgrid.yml
@@ -1,6 +1,8 @@
 ---
 - name: Send emails via Sendgrid
   hosts: localhost
+  vars:
+    user_email: "bsollar@redhat.com"
   roles:
     - { role: sendgrid, tags: ['ares']  } # orion
 
