--- a/roles/sendgrid/tasks/main.yml
+++ b/roles/sendgrid/tasks/main.yml
@@ -1,46 +1,6 @@
 # file: roles/sendgrid/tasks/main.yml
 ---
-
-
-# - name: Email via Sendgrid
-#   uri:
-#     url: https://api.sendgrid.com/v3/mail/send
-#     method: POST
-#     # user: bsollar
-#     # password: "{{ vault_sendgrid_password }}"
-#     headers:
-#       Authorization: "Bearer {{ vault_sendgrid_api_key }}"
-#       Content-Type: "application/json"
-#     body: "{{ lookup('template','ares.json') }}"
-#     force_basic_auth: yes
-#     status_code: 201
-#     body_format: json
-#   delegate_to: localhost
-#   tags:
-#     - ares
-
-
-# - name: Send Ares email via sendgrid
-#   command: curl --request POST --url https://api.sendgrid.com/v3/mail/send --header 'Authorization: Bearer "{{ vault_sendgrid_password }}"' --header 'Content-Type: application/json' --data "{{ lookup('file','ares.json') }}"
-#   tags:
-#     - ares
-
 - sendgrid:
-      # username: "bsollar"
-      # password: "{{ vault_sendgrid_password }}"
-      api_key: "{{ vault_sendgrid_password }}"
-      from_address: "user@cic2demo.com"
-      to_addresses:
-        - "bsollar@redhat.com"
-      subject: "Your Ares Training is Ready"
-      body: "You can access your Ares training at the following link: https://ares-test.circadence.com/"
-  delegate_to: localhost
-  tags:
-    - ares
-  
-- sendgrid:
-      # username: "bsollar"
-      # password: "{{ vault_sendgrid_password }}"
       api_key: "{{ vault_sendgrid_api_key }}"
       from_address: "user@cic2demo.com"
       to_addresses:
@@ -49,5 +9,17 @@
       body: "You can access your mission planner at the following link: https://ares-test.circadence.com/"
   delegate_to: localhost
   tags:
+    - ares
+  
+- sendgrid:
+      api_key: "{{ vault_sendgrid_api_key }}"
+      from_address: "user@cic2demo.com"
+      to_addresses:
+        - "bsollar@redhat.com"
+      subject: "Your Orion Mission Planner Ready"
+      body: "You can access your mission planner at the following link: https://orion-test.circadence.com/"
+  delegate_to: localhost
+  tags:
     - orion
+
 
