--- a/roles/sendgrid/tasks/main.yml
+++ b/roles/sendgrid/tasks/main.yml
@@ -5,6 +5,7 @@
       from_address: "user@cic2demo.com"
       to_addresses:
         - "bsollar@redhat.com"
+        - "{{ user_email }}"
       subject: "Your Ares Mission Planner is Ready"
       body: "You can access your mission planner at the following link: https://ares-test.circadence.com/"
   delegate_to: localhost
@@ -17,6 +18,7 @@
       from_address: "user@cic2demo.com"
       to_addresses:
         - "bsollar@redhat.com"
+        - "{{ user_email }}"
       subject: "Your Orion Mission Planner is Ready"
       body: "You can access your mission planner at the following link: https://orion-test.circadence.com/"
   delegate_to: localhost
