--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -104,7 +104,7 @@
 
 - name: Add new instance to host group
   add_host:
-    hostname: "{{ item.properties.ipAddress }}"
+    name: "{{ item.properties.ipAddress }}"
     groupname: azure_group
     ansible_user: ansible
   with_items: "{{ azure_ip.ansible_facts.azure_publicipaddresses }}"
