--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -105,6 +105,6 @@
 - name: Add new instance to host group
   add_host:
     name: "{{ item.properties.ipAddress }}"
-    groupname: azure_group
+    groups: azure_group
     ansible_user: ansible
   with_items: "{{ azure_ip.ansible_facts.azure_publicipaddresses }}"
