working on tower cic2

--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -108,3 +108,6 @@
     groups: azure_group
     ansible_user: ansible
   with_items: "{{ azure_ip.ansible_facts.azure_publicipaddresses }}"
+
+- pause:
+    minutes: 1
