--- a/site.yml
+++ b/site.yml
@@ -7,13 +7,9 @@
     - { role: deploy, tags: ['deploy'] }
     - { role: teardown, tags: ['teardown'] }
 
-
-- name: Install Dev Environment
+- name: Install Eclipse Che
   hosts: azure_group
   become: yes
-
- 
- 
-  # roles:
-  #   - zsh
-  #   - eclipse_che
+  roles:
+    - zsh
+    - eclipse_che
