working on tower cic2

--- a/roles/eclipse_che/tasks/main.yml
+++ b/roles/eclipse_che/tasks/main.yml
@@ -10,6 +10,12 @@
 - name: Eanble insecure registry
   shell: sed -i '/OPTIONS=.*/c\OPTIONS="--selinux-enabled --insecure-registry 172.30.0.0/16 --log-opt max-size=1M --log-opt max-file=3"' /etc/sysconfig/docker
 
+- name: Prepare additional block device
+  shell: echo -e "WIPE_SIGNATURES=true\nDEVS=/dev/xvdb\nVG=docker-vg" >> /etc/sysconfig/docker-storage-setup
+
+- name: Create 'docker-pool' logical volume
+  command: docker-storage-setup
+
 - name: Start docker
   service: name=docker state=started enabled=yes
 
