--- a/roles/eclipse_che/tasks/main.yml
+++ b/roles/eclipse_che/tasks/main.yml
@@ -10,23 +10,18 @@
 - name: Eanble insecure registry
   shell: sed -i '/OPTIONS=.*/c\OPTIONS="--selinux-enabled --insecure-registry 172.30.0.0/16 --log-opt max-size=1M --log-opt max-file=3"' /etc/sysconfig/docker
 
-- name: Prepare additional block device
-  shell: echo -e "WIPE_SIGNATURES=true\nDEVS=xvdb\nVG=docker-vg" >> /etc/sysconfig/docker-storage-setup
-
-- name: Create 'docker-pool' logical volume
-  command: docker-storage-setup
-
 - name: Start docker
   service: name=docker state=started enabled=yes
 
 - name: Spinup Eclipse Che
-  command: docker run -d -p 8080:8080  --name che3 -v /var/run/docker.sock:/var/run/docker.sock -v /home/ansible:/data:Z --security-opt label:disable eclipse/che-server:6.0.0
+  command: docker run -d -p 8080:8080  -e CHE_HOST=40.71.209.23:8080 --name che3 -v /var/run/docker.sock:/var/run/docker.sock -v /home/ansible:/data:Z --security-opt label:disable eclipse/che-server:6.0.0
 
 # -e CHE_HOST="$(curl -H Metadata:true 'http://169.254.169.254/metadata/instance/network?api-version=2017-08-01' | jq '.[][].ipv4.ipAddress[].publicIpAddress')"
 
-docker run -p 8080:8080 \
-           --name che \
-           --rm \
-           -v /var/run/docker.sock:/var/run/docker.sock \
-           -v /home/ansible:/data \
-           eclipse/che-server:6.0.0
+# sudo docker run -p 8080:8080 \
+#            --name che \
+#            -e CHE_HOST=40.71.209.23:8080 \
+#            --rm \
+#            -v /var/run/docker.sock:/var/run/docker.sock \
+#            -v /home/ansible:/data \
+#            eclipse/che-server:6.0.0
