--- a/roles/eclipse_che/tasks/main.yml
+++ b/roles/eclipse_che/tasks/main.yml
@@ -13,12 +13,12 @@
   with_items:
     - yum-utils
     - docker-ce
-    
+
 - name: Start docker
   service: name=docker state=started enabled=yes
 
 - name: Spinup Eclipse Che
-  command: PUBLIC_IP="$(curl -H Metadata:true 'http://169.254.169.254/metadata/instance/network?api-version=2017-08-01' | jq '.[][].ipv4.ipAddress[].publicIpAddress')" && docker run -d -p 8080:8080  -e CHE_HOST=$PUBLIC_IP --name che3 -v /var/run/docker.sock:/var/run/docker.sock -v /home/ansible:/data:Z --security-opt label:disable eclipse/che-server:6.0.0
+  command: PUBLIC_IP="$(curl -H Metadata:true http://169.254.169.254/metadata/instance/network?api-version=2017-08-01 | jq '.[][].ipv4.ipAddress[].publicIpAddress')" && docker run -d -p 8080:8080  -e CHE_HOST=$PUBLIC_IP --name che3 -v /var/run/docker.sock:/var/run/docker.sock -v /home/ansible:/data:Z --security-opt label:disable eclipse/che-server:6.0.0
 
 # -e CHE_HOST="$(curl -H Metadata:true 'http://169.254.169.254/metadata/instance/network?api-version=2017-08-01' | jq '.[][].ipv4.ipAddress[].publicIpAddress')"
 
