--- a/site.yml
+++ b/site.yml
@@ -4,8 +4,8 @@
   connection: local
   gather_facts: false
   roles:
-    - { role: deploy, tags: ['deploy'] }
-    - { role: teardown, tags: ['teardown'] }
+    - deploy
+
 
 - name: Install Eclipse Che
   hosts: azure
