--- a/roles/eclipse_che/tasks/main.yml
+++ b/roles/eclipse_che/tasks/main.yml
@@ -22,10 +22,13 @@
 
 # -e CHE_HOST="$(curl -H Metadata:true 'http://169.254.169.254/metadata/instance/network?api-version=2017-08-01' | jq '.[][].ipv4.ipAddress[].publicIpAddress')"
 
-# sudo docker run -p 8080:8080 \
-#            --name che \
-#            -e CHE_HOST=40.71.209.23:8080 \
-#            --rm \
-#            -v /var/run/docker.sock:/var/run/docker.sock \
-#            -v /home/ansible:/data \
-#            eclipse/che-server:6.0.0
+sudo docker run -p 8080:8080 \
+           --name che \
+           --rm \
+           -e CHE_HOST=40.71.209.23:8080 \
+           -e CHE_DOCKER_IP=40.71.209.23
+           -v /var/run/docker.sock:/var/run/docker.sock \
+           -v /home/ansible/data:/data \
+           eclipse/che-server:latest
+
+           -e CHE_SINGLE_PORT=true \
