--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -39,3 +39,11 @@
   npm:
     path: "{{ nodejs_package_json_path }}"
   when: nodejs_package_json_path is defined and nodejs_package_json_path
+
+- name: Inatall make & gcc
+  yum:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - make
+    - gcc-c++
