working on tower cic2

--- a/site.yml
+++ b/site.yml
@@ -13,9 +13,7 @@
     system_user: ansible
   roles:
     - zsh
-    - epel  
-    - mongodb 
-    - nodejs  
-    - nodejs_app
+    - epel
+    - cic2
 
 
