working on tower cic2

--- a/roles/cic2/tasks/main.yml
+++ b/roles/cic2/tasks/main.yml
@@ -15,7 +15,7 @@
     enabled: yes
 
 - name: Start cic2
-  docker:
+  docker_container:
     name: cic2
     image: dischord01/cic2:02
     state: started
