--- a/roles/cic2/tasks/main.yml
+++ b/roles/cic2/tasks/main.yml
@@ -9,6 +9,6 @@
     - docker
 
 - name: Start cic2
-  command: docker run -ti --rm -p 8080:8080 -e MONGODB_URI={{ vault_mongo_uri }} dischord01/cic2:02
+  command: docker run -d --rm -p 8080:8080 -e MONGODB_URI={{ vault_mongo_uri }} dischord01/cic2:02
 
 
