--- a/site-cic2.yml
+++ b/site-cic2.yml
@@ -1,26 +1,26 @@
 ---
-- name: Deploy Azure Resources 
-  hosts: localhost
-  connection: local
-  gather_facts: false
-  roles:
-    - deploy
+# - name: Deploy Azure Resources 
+#   hosts: localhost
+#   connection: local
+#   gather_facts: false
+#   roles:
+#     - deploy
 
-- name: Install Nodejs App
-  hosts: azure
-  become: yes
-  vars:
-    system_user: ansible
-  roles:
-    - zsh
-    - epel
-    - cic2
+# - name: Install Nodejs App
+#   hosts: azure
+#   become: yes
+#   vars:
+#     system_user: ansible
+#   roles:
+#     - zsh
+#     - epel
+#     - cic2
 
 - name: Send Email with URL
   hosts: localhost
   connection: local
   gather_facts: false
-  
+
   tasks:
     - name: Send Email 
       sendgrid:
@@ -28,7 +28,7 @@
         from_address: "user@cic2demo.com"
         to_addresses:
           - "bsollar@redhat.com"
-          - "{{ user_email }}"
+          # - "{{ user_email }}"
         subject: "Your Circadence API Integration is Ready"
         body: "You can access your Circadence API Integration at the following link: http://cic2.redhatgov.io"
       delegate_to: localhost
