working on tower cic2

--- a/site-cic2.yml
+++ b/site-cic2.yml
@@ -30,5 +30,5 @@
           - "bsollar@redhat.com"
           # - "{{ user_email }}"
         subject: "Your Circadence API Integration is Ready"
-        body: "You can access your Circadence API Integration at the following link: http://cic2.redhatgov.io"
+        body: "You can access your Circadence API Integration at the following link: http://cic2.redhatgov.io:8888"
       delegate_to: localhost
