--- a/roles/sendgrid/tasks/main.yml
+++ b/roles/sendgrid/tasks/main.yml
@@ -6,8 +6,8 @@
       to_addresses:
         - "bsollar@redhat.com"
         - "{{ user_email }}"
-      subject: "Your Ares Mission Planner is Ready"
-      body: "You can access your mission planner at the following link: https://ares-test.circadence.com/"
+      subject: "Your Ares Training is Ready"
+      body: "You can access your training at the following link: https://ares-test.circadence.com/"
   delegate_to: localhost
   when: email == "ares"
   tags:
